# emotion_detection

./: .gitignore  Emotion_Detection.ipynb  README.md  open_nb.bat  open_nb.sh  pyproject.toml  setup.bat  setup.sh
.ipynb_checkpoints/: Emotion_Detection-checkpoint.ipynb
content/saved_model/: history_mlp.json
notebooks/: Emotion_Detection_mlp.ipynb  Emotion_Detection_r.ipynb
notebooks/.ipynb_checkpoints/: Emotion_Detection_mlp-checkpoint.ipynb  Emotion_Detection_r-checkpoint.ipynb
src/: Evaluate.py  __init__.py  cnn.py  fer_dataset.py  resnet18.py
src/data/: Evaluate.py  Training.py  cnn.py  data_preprocessing.py  fer_dataset.py  mlp.py  rasnet18.py  resnet18.py
